# homelab-dashboard

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  app.py  config.py  docker-compose.dev.yml  docker-compose.yml  flask-app.dockerfile  health.py  models.py  notes.md  pip-flask-app.dockerfile  pyproject.toml  requirements.txt  resources.md  tests.py
app/: __init__.py  models.py  old.txt  pip-flask-app.dockerfile  tests.py
app/blueprints/: health.py  main.py  services.py
app/static/: index.html  main.js
app/utils/: config.py  healthcheck.py  pydantic.py
nginx/: nginx.conf  nginx.dockerfile
